--- a/templates/website/index.html
+++ b/templates/website/index.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!doctype html>
 <html class="no-js" lang="en">
 
@@ -17,35 +18,35 @@
         <title>CarVilla</title>
 
         <!-- For favicon png -->
-		<link rel="shortcut icon" type="image/icon" href="assets/logo/favicon.png"/>
+		<link rel="shortcut icon" type="image/icon" href="{% static 'assets/logo/favicon.png' %}"/>
        
         <!--font-awesome.min.css-->
-        <link rel="stylesheet" href="assets/css/font-awesome.min.css">
+        <link rel="stylesheet" href="{% static 'assets/css/font-awesome.min.css'%}">
 
         <!--linear icon css-->
-		<link rel="stylesheet" href="assets/css/linearicons.css">
+		<link rel="stylesheet" href="{% static 'assets/css/linearicons.css'%}">
 
         <!--flaticon.css-->
-		<link rel="stylesheet" href="assets/css/flaticon.css">
+		<link rel="stylesheet" href="{% static 'assets/css/flaticon.css'%}">
 
 		<!--animate.css-->
-        <link rel="stylesheet" href="assets/css/animate.css">
+        <link rel="stylesheet" href="{% static 'assets/css/animate.css'%}">
 
         <!--owl.carousel.css-->
-        <link rel="stylesheet" href="assets/css/owl.carousel.min.css">
-		<link rel="stylesheet" href="assets/css/owl.theme.default.min.css">
+        <link rel="stylesheet" href="{% static 'assets/css/owl.carousel.min.css'%}">
+		<link rel="stylesheet" href="{% static 'assets/css/owl.theme.default.min.css'%}">
 		
         <!--bootstrap.min.css-->
-        <link rel="stylesheet" href="assets/css/bootstrap.min.css">
+        <link rel="stylesheet" href="{% static 'assets/css/bootstrap.min.css'%}">
 		
 		<!-- bootsnav -->
-		<link rel="stylesheet" href="assets/css/bootsnav.css" >	
+		<link rel="stylesheet" href="{% static 'assets/css/bootsnav.css'%}" >	
         
         <!--style.css-->
-        <link rel="stylesheet" href="assets/css/style.css">
+        <link rel="stylesheet" href="{% static 'assets/css/style.css'%}">
         
         <!--responsive.css-->
-        <link rel="stylesheet" href="assets/css/responsive.css">
+        <link rel="stylesheet" href="{% static 'assets/css/responsive.css'%}">
         
         <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
         <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -289,7 +290,7 @@
 								<div class="row">
 									<div class="col-md-7 col-sm-12">
 										<div class="new-cars-img">
-											<img src="assets/images/new-cars-model/ncm1.png" alt="img"/>
+											<img src="{% static 'assets/images/new-cars-model/ncm1.png' %}" alt="img"/>
 										</div><!--/.new-cars-img-->
 									</div>
 									<div class="col-md-5 col-sm-12">
@@ -314,7 +315,7 @@
 								<div class="row">
 									<div class="col-md-7 col-sm-12">
 										<div class="new-cars-img">
-											<img src="assets/images/new-cars-model/ncm2.png" alt="img"/>
+											<img src="{% static 'assets/images/new-cars-model/ncm2.png' %}" alt="img"/>
 										</div><!--/.new-cars-img-->
 									</div>
 									<div class="col-md-5 col-sm-12">
@@ -339,7 +340,7 @@
 								<div class="row">
 									<div class="col-md-7 col-sm-12">
 										<div class="new-cars-img">
-											<img src="assets/images/new-cars-model/ncm3.png" alt="img"/>
+											<img src="{% static 'assets/images/new-cars-model/ncm3.png' %}" alt="img"/>
 										</div><!--/.new-cars-img-->
 									</div>
 									<div class="col-md-5 col-sm-12">
@@ -379,7 +380,7 @@
 							<div class="single-featured-cars">
 								<div class="featured-img-box">
 									<div class="featured-cars-img">
-										<img src="assets/images/featured-cars/fc1.png" alt="cars">
+										<img src="{% static 'assets/images/featured-cars/fc1.png' %}" alt="cars">
 									</div>
 									<div class="featured-model-info">
 										<p>
@@ -403,7 +404,7 @@
 							<div class="single-featured-cars">
 								<div class="featured-img-box">
 									<div class="featured-cars-img">
-										<img src="assets/images/featured-cars/fc2.png" alt="cars">
+										<img src="{% static 'assets/images/featured-cars/fc2.png' %}" alt="cars">
 									</div>
 									<div class="featured-model-info">
 										<p>
@@ -427,7 +428,7 @@
 							<div class="single-featured-cars">
 								<div class="featured-img-box">
 									<div class="featured-cars-img">
-										<img src="assets/images/featured-cars/fc3.png" alt="cars">
+										<img src="{% static 'assets/images/featured-cars/fc3.png' %}" alt="cars">
 									</div>
 									<div class="featured-model-info">
 										<p>
@@ -451,7 +452,7 @@
 							<div class="single-featured-cars">
 								<div class="featured-img-box">
 									<div class="featured-cars-img">
-										<img src="assets/images/featured-cars/fc4.png" alt="cars">
+										<img src="{% static 'assets/images/featured-cars/fc4.png' %}" alt="cars">
 									</div>
 									<div class="featured-model-info">
 										<p>
@@ -477,7 +478,7 @@
 							<div class="single-featured-cars">
 								<div class="featured-img-box">
 									<div class="featured-cars-img">
-										<img src="assets/images/featured-cars/fc4.png" alt="cars">
+										<img src="{% static 'assets/images/featured-cars/fc4.png' %}" alt="cars">
 									</div>
 									<div class="featured-model-info">
 										<p>
@@ -501,7 +502,7 @@
 							<div class="single-featured-cars">
 								<div class="featured-img-box">
 									<div class="featured-cars-img">
-										<img src="assets/images/featured-cars/fc5.png" alt="cars">
+										<img src="{% static 'assets/images/featured-cars/fc5.png' %}" alt="cars">
 									</div>
 									<div class="featured-model-info">
 										<p>
@@ -525,7 +526,7 @@
 							<div class="single-featured-cars">
 								<div class="featured-img-box">
 									<div class="featured-cars-img">
-										<img src="assets/images/featured-cars/fc7.png" alt="cars">
+										<img src="{% static 'assets/images/featured-cars/fc7.png' %}" alt="cars">
 									</div>
 									<div class="featured-model-info">
 										<p>
@@ -549,7 +550,7 @@
 							<div class="single-featured-cars">
 								<div class="featured-img-box">
 									<div class="featured-cars-img">
-										<img src="assets/images/featured-cars/fc8.png" alt="cars">
+										<img src="{% static 'assets/images/featured-cars/fc8.png' %}" alt="cars">
 									</div>
 									<div class="featured-model-info">
 										<p>
@@ -589,7 +590,7 @@
 								<div class="testimonial-description">
 									<div class="testimonial-info">
 										<div class="testimonial-img">
-											<img src="assets/images/clients/c1.png" alt="image of clients person" />
+											<img src="{% static 'assets/images/clients/c1.png' %}" alt="image of clients person" />
 										</div><!--/.testimonial-img-->
 									</div><!--/.testimonial-info-->
 									<div class="testimonial-comment">
@@ -609,7 +610,7 @@
 								<div class="testimonial-description">
 									<div class="testimonial-info">
 										<div class="testimonial-img">
-											<img src="assets/images/clients/c2.png" alt="image of clients person" />
+											<img src="{% static 'assets/images/clients/c2.png' %}" alt="image of clients person" />
 										</div><!--/.testimonial-img-->
 									</div><!--/.testimonial-info-->
 									<div class="testimonial-comment">
@@ -629,7 +630,7 @@
 								<div class="testimonial-description">
 									<div class="testimonial-info">
 										<div class="testimonial-img">
-											<img src="assets/images/clients/c3.png" alt="image of clients person" />
+											<img src="{% static 'assets/images/clients/c3.png' %}" alt="image of clients person" />
 										</div><!--/.testimonial-img-->
 									</div><!--/.testimonial-info-->
 									<div class="testimonial-comment">
@@ -658,34 +659,34 @@
 					<div class="owl-carousel owl-theme brand-item">
 						<div class="item">
 							<a href="#">
-								<img src="assets/images/brand/br1.png" alt="brand-image" />
+								<img src="{% static 'assets/images/brand/br1.png' %}" alt="brand-image" />
 							</a>
 						</div><!--/.item-->
 						<div class="item">
 							<a href="#">
-								<img src="assets/images/brand/br2.png" alt="brand-image" />
+								<img src="{% static 'assets/images/brand/br2.png' %}" alt="brand-image" />
 							</a>
 						</div><!--/.item-->
 						<div class="item">
 							<a href="#">
-								<img src="assets/images/brand/br3.png" alt="brand-image" />
+								<img src="{% static 'assets/images/brand/br3.png' %}" alt="brand-image" />
 							</a>
 						</div><!--/.item-->
 						<div class="item">
 							<a href="#">
-								<img src="assets/images/brand/br4.png" alt="brand-image" />
-							</a>
-						</div><!--/.item-->
-
-						<div class="item">
-							<a href="#">
-								<img src="assets/images/brand/br5.png" alt="brand-image" />
+								<img src="{% static 'assets/images/brand/br4.png' %}" alt="brand-image" />
 							</a>
 						</div><!--/.item-->
 
 						<div class="item">
 							<a href="#">
-								<img src="assets/images/brand/br6.png" alt="brand-image" />
+								<img src="{% static 'assets/images/brand/br5.png' %}" alt="brand-image" />
+							</a>
+						</div><!--/.item-->
+
+						<div class="item">
+							<a href="#">
+								<img src="{% static 'assets/images/brand/br6.png' %}" alt="brand-image" />
 							</a>
 						</div><!--/.item-->
 					</div><!--/.owl-carousel-->
@@ -811,24 +812,24 @@
 		
 		<!-- Include all js compiled plugins (below), or include individual files as needed -->
 
-		<script src="assets/js/jquery.js"></script>
+		<script src="{% static 'assets/js/jquery.js' %}"></script>
         
         <!--modernizr.min.js-->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"></script>
 		
 		<!--bootstrap.min.js-->
-        <script src="assets/js/bootstrap.min.js"></script>
+        <script src="{% static 'assets/js/bootstrap.min.js' %}"></script>
 		
 		<!-- bootsnav js -->
-		<script src="assets/js/bootsnav.js"></script>
+		<script src="{% static 'assets/js/bootsnav.js' %}"></script>
 
 		<!--owl.carousel.js-->
-        <script src="assets/js/owl.carousel.min.js"></script>
+        <script src="{% static 'assets/js/owl.carousel.min.js' %}"></script>
 
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.min.js"></script>
 
         <!--Custom JS-->
-        <script src="assets/js/custom.js"></script>
+        <script src="{% static 'assets/js/custom.js' %}"></script>
         
     </body>
 	
